@@ -1,5 +1,8 @@
 2023-10-15  Ulrich Müller  <ulm@gentoo.org>
 
+	* ebuild-mode.el (ebuild-mode-time-string): Move setting of TZ
+	into the unwind-protect form.
+
 	* ebuild-mode.el (static-if): New macro, taken from APEL.
 	(sh-must-be-shell-mode): Use it. This should finally fix the
 	byte-compile warning for defadvice in Emacs 30.
